debugging workflow